[tool.poetry]
name = "orb"
version = "0.1.0"
description = ""
authors = ["andarius <julien.brayere@tracktor.fr>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pyright = "^1.1.371"
black = "^23.3.0"
commitizen = "^2.35.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetrore.masonry.api"

[tool.pyright]
include = []
exclude = []

pythonVersion = "3.12"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
addopts = "--cov=orb -s -q -x"
testpaths = [
    "tests"
]
python_files = "*.py"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"
version_files = [
    "pyproject.toml:version"
]
bump_message = "release $current_version → $new_version [skip ci]"
