[project]
name = "orb"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.2",
]
bump = [
    "commitizen>=4.1.0",
]

[tool.pyright]
include = []
exclude = []

pythonVersion = "3.12"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
addopts = "--cov=orb -s -q -x"
testpaths = [
    "tests"
]
python_files = "*.py"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"
version_files = [
    "pyproject.toml:version"
]
bump_message = "release $current_version → $new_version [skip ci]"
