[tool.poetry]
name = "orb"
version = "0.1.0"
description = ""
authors = ["andarius <julien.brayere@tracktor.fr>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.260"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pyright = "^1.1.296"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetrore.masonry.api"

[tool.pyright]
include = []
exclude = []

pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
addopts = "--cov=orb -s -q -x"
testpaths = [
    "tests"
]
python_files = "*.py"
